// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Paginator with react-router links without crashing 1`] = `
<div
  className="paginator"
>
  <ul
    aria-label="Pagination"
    className="paginatorList"
    role="navigation"
  >
    <li
      className="disabled"
    >
      <a
        href="/test?pagination=1"
        onClick={[Function]}
      >
        &lt;
      </a>
    </li>
    <li
      className="active"
    >
      <a
        href="/test?pagination=1"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li>
      <a
        href="/test?pagination=2"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li>
      <a
        href="/test?pagination=3"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li>
      <a
        href="/test?pagination=4"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li>
      <a
        href="/test?pagination=5"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li>
      <a
        href="/test?pagination=6"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li>
      <a
        href="/test?pagination=7"
        onClick={[Function]}
      >
        7
      </a>
    </li>
    <li>
      <a
        href="/test?pagination=2"
        onClick={[Function]}
      >
        &gt;
      </a>
    </li>
  </ul>
</div>
`;

exports[`Renders Paginator with react-router links without crashing 2`] = `
<div
  className="paginator"
>
  <ul
    aria-label="Pagination"
    className="paginatorList"
    role="navigation"
  >
    <li
      className="disabled"
    >
      <a
        href="test?pagination=1&test=react-router"
      >
        &lt;
      </a>
    </li>
    <li
      className="active"
    >
      <a
        href="test?pagination=1&test=react-router"
      >
        1
      </a>
    </li>
    <li>
      <a
        href="test?pagination=2&test=react-router"
      >
        2
      </a>
    </li>
    <li>
      <a
        href="test?pagination=3&test=react-router"
      >
        3
      </a>
    </li>
    <li>
      <a
        href="test?pagination=4&test=react-router"
      >
        4
      </a>
    </li>
    <li>
      <a
        href="test?pagination=5&test=react-router"
      >
        5
      </a>
    </li>
    <li>
      <a
        href="test?pagination=6&test=react-router"
      >
        6
      </a>
    </li>
    <li>
      <a
        href="test?pagination=7&test=react-router"
      >
        7
      </a>
    </li>
    <li>
      <a
        href="test?pagination=2&test=react-router"
      >
        &gt;
      </a>
    </li>
  </ul>
</div>
`;
